@@ -93,6 +93,12 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-inline</artifactId>
+			<version>5.2.0</version> <scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -101,7 +107,14 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.2.5</version> <configuration>
+				<argLine>--enable-preview -XX:+EnableDynamicAgentLoading</argLine>
+			</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
 </project>
+
